# color-detection

./: det.py  det2.py  pyproject.toml
