[tool.poetry]
name = "color-detection"
version = "0.1.0"
description = ""
authors = ["Evgeny Chernyshov <evgeny.chernyshov@hkeeper.global>"]
readme = "README.md"
packages = [{include = "color_detection"}]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^9.5.0"
colorthief = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
